--- a/Registration/Web.Debug.config
+++ b/Registration/Web.Debug.config
@@ -23,8 +23,10 @@
       
       <customErrors defaultRedirect="GenericError.htm"
         mode="RemoteOnly" xdt:Transform="Replace">
+        
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
+      <customErrors mode="Onn"/>
     -->
   </system.web>
 </configuration>
