--- a/Registration/Web.Debug.config
+++ b/Registration/Web.Debug.config
@@ -26,7 +26,7 @@
         
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
-      <customErrors mode="Onn"/>
+      <customErrors mode="On"/>
     -->
   </system.web>
 </configuration>
