--- a/Registration/Web.Debug.config
+++ b/Registration/Web.Debug.config
@@ -14,19 +14,10 @@
     </connectionStrings>
   -->
   <system.web>
-    <customErrors mode="On"/>
-    <!--
-      In the example below, the "Replace" transform will replace the entire 
-      <customErrors> section of your Web.config file.
-      Note that because there is only one customErrors section under the 
-      <system.web> node, there is no need to use the "xdt:Locator" attribute.
-      
       <customErrors defaultRedirect="GenericError.htm"
-        mode="RemoteOnly" xdt:Transform="Replace">
+        mode="On" xdt:Transform="Replace">
         
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
-      
-    -->
   </system.web>
 </configuration>
