--- a/Registration/Web.config
+++ b/Registration/Web.config
@@ -16,6 +16,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On" >
+        <error statusCode="500" redirect="InternalError.htm"/>
+      </customErrors>
     <compilation debug="true" targetFramework="4.0" />
     <pages>
       <namespaces>
