--- a/Registration/Web.config
+++ b/Registration/Web.config
@@ -16,9 +16,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors mode="On" >
-        <error statusCode="500" redirect="InternalError.htm"/>
-      </customErrors>
+    <customErrors mode="On" />
     <compilation debug="true" targetFramework="4.0" />
     <pages>
       <namespaces>
