--- a/Registration/Web.Debug.config
+++ b/Registration/Web.Debug.config
@@ -14,10 +14,6 @@
     </connectionStrings>
   -->
   <system.web>
-      <customErrors defaultRedirect="GenericError.htm"
-        mode="On" xdt:Transform="Replace">
-        
-        <error statusCode="500" redirect="InternalError.htm"/>
-      </customErrors>
+      <customErrors mode="On" xdt:Transform="Replace"/>
   </system.web>
 </configuration>
